--- a/e-commerce-product-page/ecommerce-product-page-main/mobile.css
+++ b/e-commerce-product-page/ecommerce-product-page-main/mobile.css
@@ -2,17 +2,43 @@
     
     main{
         flex-direction: column;
+        margin: 0px;
        
     }
 
     .description{
-        margin: 10px;
+       
     }
 
     img.selected {
-        width: 100%;
-        border-radius: 8px;
-        transition: all 0.5s;
+        width: 100vw;
+        border-radius: 0px;
+        margin: 0px;
+        
     
+    }
+
+    body{
+        list-style: none;
+        height: 100vh;
+        margin: 15px;
+    }
+
+    li.list-men{
+        display: none;
+    }
+
+    header nav ul{
+        
+        padding-bottom: 20px;
+        border-bottom: 2px solid var(--Lightgrayishblue);
+    
+        
+    
+    }
+
+    ul.thumbnail{
+        display: none;
+        padding: 0px;
     }
 }
