--- a/e-commerce-product-page/ecommerce-product-page-main/style.css
+++ b/e-commerce-product-page/ecommerce-product-page-main/style.css
@@ -39,10 +39,15 @@ header nav ul{
     color: var(--Grayishblue);
     padding-bottom: 30px;
     border-bottom: 2px solid var(--Lightgrayishblue);
-    cursor: pointer;
     
-
+ 
 }
+
+nav.navbar{
+    display: none;
+   
+}
+
 
 header nav ul li{
     transition: all 0.5s;
@@ -68,6 +73,7 @@ nav figure.profile{
 
 main{
     margin: 90px 40px;
+    padding-bottom: 80px;
     display: flex;
     gap: 90px;
     align-items: center
@@ -186,4 +192,9 @@ p.percent{
     padding: 15px 25px;
     border-radius: 8px;
     cursor: pointer
+}
+
+button#plus, button#minus{
+    background: none;
+    border: none;
 }
