--- a/e-commerce-product-page/ecommerce-product-page-main/mobile.css
+++ b/e-commerce-product-page/ecommerce-product-page-main/mobile.css
@@ -3,17 +3,27 @@
     main{
         flex-direction: column;
         margin: 0px;
+        gap: 17px;
        
     }
 
-    .description{
-       
+    h1{
+        font-size: 2.3rem;
+        padding-bottom: 15px;
+    }
+
+    h4{
+        color: var(--Orange);
+        padding-bottom: 15px;
+        text-transform: uppercase;
     }
 
     img.selected {
         width: 100vw;
         border-radius: 0px;
         margin: 0px;
+    
+        
         
     
     }
@@ -24,16 +34,74 @@
         margin: 15px;
     }
 
+    header {
+        height: 60px;
+        transition: all .5s;
+
+    }
+
+
+
+    header:hover{
+        height: 140px;
+        
+    }
+
+    nav figure.profile{
+        gap: 20px;
+    }
+
     li.list-men{
         display: none;
+     
+    }
+
+    nav.navbar{
+        display: flex;
+        justify-content: space-around;
+        padding: 30px;
+        overflow: hidden;
+        cursor: pointer;
+        
+    }
+
+    nav.navbar ul{
+        list-style-type: none;
+        display: flex;
+        gap: 20px;
+    
+    }
+
+    nav.navbar ul li:hover{
+        font-size: 1.1rem;
+    
+    }
+
+    .menu-hamburger{
+        cursor: pointer;
+    }
+
+    .description p{
+        font-size: 1rem;
+        color: var(--Darkgrayishblue);
+        line-height: 1.4rem;
+    }
+
+    figure.mobile-menu{
+        display: flex;
+        align-items: center;
+        gap: 20px;
+
+    }
+
+    .profile img.avatar{
+        width: 35px;
     }
 
     header nav ul{
         
         padding-bottom: 20px;
-        border-bottom: 2px solid var(--Lightgrayishblue);
-    
-        
+        border-bottom: none;
     
     }
 
@@ -41,4 +109,30 @@
         display: none;
         padding: 0px;
     }
+
+    .price{
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+        flex-grow: 2;
+        align-items: center;
+        padding: 20px 0px;
+        justify-content: space-between;
+    }
+
+    p.percent{
+  
+        background-color: var(--Pale);
+        color: var(--Orange);
+        padding: 4px 7px;
+        border-radius: 5px;
+    }
+
+    .line-cart{
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        gap: 20px;
+    }
+
 }
