--- a/e-commerce-product-page/ecommerce-product-page-main/mobile.css
+++ b/e-commerce-product-page/ecommerce-product-page-main/mobile.css
@@ -56,6 +56,41 @@
      
     }
 
+    /* carrinho */
+    #cart-screen{
+        left: 50%;
+        transform: translate(-50%);
+        position: absolute;
+        text-align: center;
+        background-color: white;
+        width: 90%;
+        height: 250px;
+        margin-top: 15px;
+        border-radius: 12px;
+        
+    }
+
+    .header-cart{
+        display: flex;
+        justify-content: space-between;
+        padding: 20px 15px;
+    }
+
+    .p-title{
+        font-weight: 700;
+    }
+
+    button#exit{
+        font-weight: 700;
+        color: white;
+        background-color: var(--Orange);
+        border: none;
+        width: 19px;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+    /* fim carrinho */
+
     nav.navbar{
         display: flex;
         justify-content: space-around;
