--- a/e-commerce-product-page/ecommerce-product-page-main/mobile.css
+++ b/e-commerce-product-page/ecommerce-product-page-main/mobile.css
@@ -34,7 +34,7 @@
         margin: 15px;
     }
 
-    header {
+    #header {
         height: 60px;
         transition: all .5s;
 
@@ -42,10 +42,7 @@
 
 
 
-    header:hover{
-        height: 140px;
-        
-    }
+   
 
     nav figure.profile{
         gap: 20px;
@@ -67,7 +64,7 @@
         height: 250px;
         margin-top: 15px;
         border-radius: 12px;
-        
+        display: none;
     }
 
     .header-cart{
@@ -89,7 +86,6 @@
         border-radius: 4px;
         cursor: pointer;
     }
-    /* fim carrinho */
 
     nav.navbar{
         display: flex;
@@ -97,6 +93,7 @@
         padding: 30px;
         overflow: hidden;
         cursor: pointer;
+        align-items: center;
         
     }
 
@@ -104,6 +101,7 @@
         list-style-type: none;
         display: flex;
         gap: 20px;
+      
     
     }
 
@@ -114,6 +112,7 @@
 
     .menu-hamburger{
         cursor: pointer;
+        display: flex;
     }
 
     .description p{
@@ -127,6 +126,12 @@
         align-items: center;
         gap: 20px;
 
+    }
+
+    figure.mobile-menu button{
+       
+        background-color: white;
+        border: none;
     }
 
     .profile img.avatar{
